# python-template

./: README.md  clean.bash  pyproject.toml  setup.bash
.devcontainer/: Dockerfile  devcontainer.json
tests/: test_python_template.py
